# TPrust

./: CHANGELOG  Cargo.toml  README.md
src/: diffusion-palette.rs  diffusion-steinberg.rs  diffusion.rs  matrice_de_Bayer.rs  palette.rs  seuillage.rs  tramage.rs
