[package]
name = "TPrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
rand = "0.8.4"

[[bin]]
name = "seuillage"
path = "src/seuillage.rs"

[[bin]]
name = "palette"
path = "src/palette.rs"

[[bin]]
name = "tramage"
path = "src/tramage.rs"

[[bin]]
name = "diffusion"
path = "src/diffusion.rs"

[[bin]]
name = "diffusion-palette"
path = "src/diffusion-palette.rs"

[[bin]]
name = "diffusion-steinberg"
path = "src/diffusion-steinberg.rs"